Handle buttons update

--- a/code_final/visitor_counter.X/nbproject/Makefile-genesis.properties
+++ b/code_final/visitor_counter.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Tue Mar 02 08:54:38 CET 2021
+#Sat Mar 13 13:12:09 CET 2021
 default.languagetoolchain.version=2.31
 default.Pack.dfplocation=/Applications/microchip/mplabx/v5.45/packs/Microchip/PIC12-16F1xxx_DFP/1.2.63
 conf.ids=default
 default.languagetoolchain.dir=/Applications/microchip/xc8/v2.31/pic-as/bin
-host.id=3bgq-1qdc-p8
-configurations-xml=2427bfba36608e82c3b6173619103dd9
+host.id=24c8-b8qt-4y
+configurations-xml=65e553d4836090fdb82e794d608cb80e
 default.com-microchip-mplab-nbide-toolchainPICASM-PICASMLanguageToolchain.md5=12dee8777de28f24b1b2ff6904a03143
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=/Users/maxime/bac3/info-2055-em-project/git/code_final/visitor_counter.X
+proj.dir=/Users/maxime/Documents/bac3/info-2055-em-project/git/code_final/visitor_counter.X
 host.platform=mac
